lotto.ie (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 4060,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.94,
  "homepage_snapshot_redirected_domain": "lotto.ie",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060404163906id_/http://www.lotto.ie/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060404163906id_/http%3A//lotto.ie",
  "interval": "2006_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "lotto.ie",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615061612id_/http%3A//www.lotto.ie/common/privacy.asp",
  "policy_title": "The National Lottery",
  "policy_url": "lotto.ie/common/privacy.asp",
  "sha1": "3fa910d6846c2e1a0cd773f7b0c69b5f1a4c5b50",
  "simhash": 25720360628484219,
  "simhash_updated": false,
  "site_hostname": "lotto.ie",
  "site_url": "http://lotto.ie",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615061612",
  "word_count": 647,
  "year": 2006
}

--- a/l/lo/lot/lotto.ie.html
+++ b/l/lo/lot/lotto.ie.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the lotto.ie privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231220746id_/http%3A//www.lotto.ie/common/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lotto.ie privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615061612id_/http%3A//www.lotto.ie/common/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/subpage.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" --> 
 <title>The National Lottery</title>
-<!-- InstanceEndEditable --> 
+<!-- InstanceEndEditable -->  
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="../includes/lotto.css" rel="stylesheet" type="text/css">
 <script language="JavaScript" type="text/JavaScript">
@@ -95,10 +95,23 @@ function openWindowLocator(url) {
 		<input name="image2" type="hidden" value="../images/bannerads/banner_ad_plus.jpg">
 		<input name="image3" type="hidden" value="../images/bannerads/banner_ad_diamond_bingo.jpg">
 		<input name="image4" type="hidden" value="../images/bannerads/banner_ad_winning_streak.jpg">
+	      <a href="javascript:openWindowLocator('telly bingo')">      
+		<input name="image5" type="hidden" value="../images/bannerads/banner_ad_telly.jpg">
+	      </a>
+	      <a href="javascript:openWindowLocator('54321')">      
+		<input name="image6" type="hidden" value="../images/bannerads/banner_ad_54321.jpg">
+	      </a>
+	      <a href="javascript:openWindowLocator('It could be you ad')">      
+		<input name="image7" type="hidden" value="../images/bannerads/banner_ad.jpg">
+	      </a>
+	      <a href="javascript:openWindowLocator('All Cash')">      
+		<input name="image8" type="hidden" value="../images/bannerads/banner_ad_cashgold.jpg">
+	      </a>
+		<input name="image9" type="hidden" value="../images/bannerads/banner_ad_payday_bonus.jpg">		
 
 
-        <input name="imgCnt" type="hidden" value="4">     
-     	<img src="https://web.archive.org/web/20051231220746id_/http%3A//www.lotto.ie/images/bannerads/banner_ad_winning_streak.jpg" name="slide" border="0" width="234" height="60" alt="" title="lotto advertisement">
+        <input name="imgCnt" type="hidden" value="9">     
+     	<img src="https://web.archive.org/web/20060615061612id_/http%3A//www.lotto.ie/images/bannerads/banner_ad_54321.jpg" name="slide" border="0" width="234" height="60" alt="" title="lotto advertisement">
  	<script>
 	<!--	 	
 		//configure the paths of the images, plus corresponding target links
@@ -110,15 +123,18 @@ function openWindowLocator(url) {
 	//-->
 	</script>
     </td>
-    <td><img src="../images/balls_mast.jpg"></td>
+      <td align="right"><img src="../images/balls_mast.jpg"></td>
+    
   </tr>
   <tr> 
-    <td colspan="3" align="right" background="../images/ticker_background.jpg" height="17" class="normal" id="Red"><strong></strong></td>
+    <td colspan="3" align="left" background="../images/ticker_background.jpg" height="17" class="normal" id="Red">
+    <!-- InstanceBeginEditable name="Ticker" --><script language="javascript" src="ticker/ticker.js"></script> <!-- InstanceEndEditable --></td>
   </tr>
-</tbody></table>
+</tbody></table> 
+
 <table width="758" border="0" cellspacing="0" cellpadding="0" align="center">
   <tbody><tr> 
-    <td rowspan="2" valign="top"> <table width="178" border="0" cellspacing="0" cellpadding="0">
+    <td rowspan="2" valign="top"><table width="178" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr> 
           <td><img src="../images/spacer.gif" height="10" width="1"></td>
         </tr>
@@ -193,10 +209,13 @@ function openWindowLocator(url) {
               <tr> 
                 <td colspan="3" class="smltxt"> 
                   
-	<a href="http://www.lotto.ie/media_room/lotto_news_show.asp?id=215">WINNNING STREAK</a><br>
+	<a href="http://www.lotto.ie/media_room/lotto_news_show.asp?id=215">FAME &amp; FORTUNE</a><br>
 	<br>
 
 	<a href="http://www.lotto.ie/media_room/lotto_news_show.asp?id=216">WARNING</a><br>
+	<br>
+
+	<a href="http://www.lotto.ie/media_room/lotto_news_show.asp?id=218">PAY DAY BONUS FROM THE NATIONAL LOTTERY</a><br>
 	<br>
 
                 </td>
@@ -219,6 +238,12 @@ function openWindowLocator(url) {
                 <td align="center"><img src="../images/nav_arrow_gr.gif" width="4" height="7" vspace="6" border="0" hspace="6"></td>
                 <td class="subnav"><a href="javascript:openWindowLocator('../common/set.html')" alt="" title="set as homepage">Set as Homepage</a></td>
               </tr>
+			  <!-- <tr> 
+                <td><img src="../images/spacer.gif" height="10" width="1"></td>
+                <td><img src="../images/nav_arrow_gr.gif" width="4" height="7" vspace="6" border="0" hspace="6"></td>
+                <td class="subnav"><a href="javascript:openWindowLocator('../common/syndicate.asp')" alt title="request syndicate pack">Request Syndicate Pack</a></td>
+              </tr>
+			  -->
               <tr> 
                 <td colspan="3"><img src="../images/spacer.gif" height="30" width="1"></td>
               </tr>
@@ -366,7 +391,7 @@ $Date: 13/07/04 8:36 $ (of last change)
   <tr> 
     <td align="center" bgcolor="#F7EAE5"><table width="758" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr> 
-          <td class="formfield" align="right" height="18">Copyright © 2004 
+          <td class="formfield" align="right" height="18">Copyright © 2006 
             An Post National Lottery Company. <a href="privacy.asp">Privacy 
             Statement</a> | <a href="terms.asp">Terms &amp; Conditions</a>&nbsp;&nbsp;&nbsp;</td>
         </tr>
