womenshealth.gov (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "health",
  "char_count": 3120,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.65,
  "homepage_snapshot_redirected_domain": "womenshealth.gov",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402221230id_/http://womenshealth.gov/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402221230id_/http%3A//womenshealth.gov",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "womenshealth.gov",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615061821id_/http%3A//womenshealth.gov/about/privacy",
  "policy_title": "About the National Women's Health Information Center - NWHIC Web Site Privacy Policy Notice",
  "policy_url": "womenshealth.gov/about/privacy",
  "sha1": "c1afd1b9ac7f1b4b17d1d9bcc70d126a64a98214",
  "simhash": 3063785450529621076,
  "simhash_updated": true,
  "site_hostname": "womenshealth.gov",
  "site_url": "http://womenshealth.gov",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060615061821",
  "word_count": 485,
  "year": 2006
}

--- a/w/wo/wom/womenshealth.gov.html
+++ b/w/wo/wom/womenshealth.gov.html
@@ -1,17 +1,22 @@
-<!--The following is the downloaded HTML source of the womenshealth.gov privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230095207id_/http%3A//womenshealth.gov/about/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the womenshealth.gov privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615061821id_/http%3A//womenshealth.gov/about/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- InstanceBegin template="/Templates/template.dwt.cfm" codeOutsideHTMLIsLocked="false" --><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="content-language" content="en-us">
-<link rel="stylesheet" type="text/css" href="../style.css">
-<script language="JavaScript" type="text/javascript" src="/scripts/triggerParams.js"></script> 
-<script language="JavaScript" type="text/javascript" src="/scripts/stdLauncher.js"></script>
+<link rel="stylesheet" type="text/css" href="/CSS/module.css">
+<script type="text/javascript" language="JavaScript" src="/scripts/triggerParams.js"></script> 
+<script type="text/javascript" language="JavaScript" src="/scripts/stdLauncher.js"></script>
 <script language="JavaScript" type="text/javascript">Poll(); </script>
-<title>Privacy Policy</title>
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>About the National Women's Health Information Center - NWHIC Web Site Privacy Policy Notice</title>
+<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
+<meta name="Keywords" content="government health women">
 </head>
-
 <body lang="en-us">
+<div class="atscreen">
 <div class="topborder">
 <p style="text-align: right; font-family: verdana, arial, sans-serif; font-size: 10pt; padding: 0; margin: 0;">
 <a href="#skiptopnav" title="Skip over the top navigation links">Skip navigation</a>
@@ -52,110 +57,127 @@
 		</form>
 		</td>
 		<td align="right" bgcolor="#FCF3E4">
-		<a href="/about/phoneinfo.htm"><img src="/borders/phones.gif" width="333" height="23" border="0" alt="1-800-994-9662. TDD: 1-888-220-5446" vspace="4"></a>
+		<a href="/about/contact/"><img src="/borders/phones.gif" width="333" height="23" border="0" alt="1-800-994-9662. TDD: 1-888-220-5446" vspace="4"></a>
 		<a name="skiptopnav" style="visibility:hidden; text-decoration:none;"><img src="/borders/clear.gif" alt="" height="1" width="1" border="0"></a>
 		</td>
 	</tr>
 </tbody></table>
 </div>
+</div>
 
-<table border="0" cellspacing="0" cellpadding="0" style="margin-left: 2em; margin-right: 2em;">
+<table width="100%" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td width="150" style="padding-right: 1em;"><p><a href="../owh/natstaff/wJones.htm"><img src="pix/everywoman.gif" alt="NWHIC logo: &quot;Every Woman.&quot; Illustration of three women." border="0" width="150" height="150"></a>
-</p>
-<p><a href="index.htm">About Us</a></p>
-<p><a href="firsttime.htm">First Time Visitors</a></p>
-<p><a href="privacy.htm">Privacy Policy</a></p>
-<p><a href="disclaimer.htm">Disclaimer</a></p>
-<p><a href="accessibility.htm">Accessibility</a></p>
-<p><a href="foia.htm">Freedom of Information Act (FOIA)</a></p>
-<p><a href="select-s.htm">Selection Criteria</a></p>
-<p><a href="awards.htm">Web Site Awards</a></p>
-<p><a href="../newsletter/">Newsletter</a></p>
-<p><a href="phoneinfo.htm">Contact Us</a></p>
-<p><a href="../index.htm">NWHIC Home Page</a></p>
-</td>
-    <td>
-	<h1>About the National Women's Health Information Center</h1>
-	<h2>NWHIC Web Site Privacy Policy Notice</h2>
+    <td class="atscreen" width="245" valign="top" bgcolor="#F8F3E5">
+	<div class="atscreen">
+		
 
-  <p>Thank you for visiting the National Women's Health Information
-  Center (NWHIC) web site and for reviewing our Privacy Policy. Our policy is clear: </p>
+<div class="navigation">
+<div class="navgroup">
 
-    <p><strong>We collect no information about you, other than information
-    automatically collected and stored (see below), when you visit our web site unless you
-    choose to provide that information to us. </strong></p>
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/about/">About Us</a></p></div>
 
-  <h3>Information Automatically Collected and Stored:</h3>
+<div class="sub_nav">
+<p class="sub"><a href="http://www.womenshealth.gov/about/firsttime/">First Time Visitors</a></p>
+<p class="sub"><a href="http://www.womenshealth.gov/about/privacy/">Privacy Policy</a></p>
+<p class="sub"><a href="http://www.womenshealth.gov/about/disclaimer/">Disclaimer</a></p>
+<p class="sub"><a href="http://www.womenshealth.gov/about/accessibility/">Accessibility</a></p>
+<p class="sub"><a href="http://www.womenshealth.gov/about/foia/">Freedom of Information Act (FOIA)</a></p>
+<p class="sub"><a href="http://www.womenshealth.gov/about/select-s/">Selection Criteria</a></p>
+<p class="sub"><a href="http://www.womenshealth.gov/about/awards/">Web Site Awards</a></p>
+<p class="sub"><a href="http://www.womenshealth.gov/newsletter/">Newsletter</a></p>
+<p class="sub"><a href="http://www.womenshealth.gov/about/contact/">Contact Us</a></p>
+</div>
 
-    <p>When you browse through any web site, certain personal information
-    about you can be collected. We automatically collect and temporarily store the following
-    information about your visit: </p><ul>
-      <li><p align="left">the name of the domain you use to access the Internet
-        (for example, aol.com, if you are using an American Online account, or stanford.edu, if
-        you are connecting from Stanford University's domain); </p>
-      </li>
-      <li><p align="left">the date and time of your visit; </p>
-      </li>
-      <li><p align="left">the pages you visited; and </p>
-      </li>
-      <li><p align="left">the address of the web site you came from when you
-        came to visit. </p>
-      </li>
-    </ul>
-    <p>We use this information for statistical purposes and to help us make
-    our site more useful to visitors. Unless it is specifically stated otherwise, no
-    additional information will be collected about you. </p>
 
-  <h3>Personally Provided Information: </h3>
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/owh/">Office on Women's Health</a></p></div>
 
-    <p>You do not have to give us personal information to use this web
-    site. </p>
-    <p>If you choose to provide us with information about yourself through
-    an e-mail message, form, survey, etc., we will only maintain the information as long as
-    needed to respond to your question or to fulfill the stated purpose of the communication. </p>
-    <p>If you use our contact form, we will send an automated confirmation
-    e-mail to the address you provide.</p>
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/topics.cfm">Health Topics</a></p></div>
 
-  <h3>Disclosure: </h3>
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/orgs.cfm">Health Organizations</a></p></div>
 
-    <p>NWHIC does not disclose, give, sell or transfer any personal
-    information about our visitors, unless required for law enforcement or statute. </p>
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/pub/">Our Publications</a></p></div>
 
-  <h3>Intrusion Detection: </h3>
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/tools/">Health Tools</a></p></div>
 
-    <p>This site is maintained by the U.S. Government. It is protected by
-    various provisions of Title 18, U.S. Code. Violations of Title 18 are subject to criminal
-    prosecution in federal court. </p>
-    <p>For site security purposes and to ensure that this service remains
-    available to all users, we employ software programs to monitor traffic to identify
-    unauthorized attempts to upload or change information, or otherwise cause damage. In the
-    event of authorized law enforcement investigations, and pursuant to any required legal
-    process, information from these sources may be used to help identify an individual. </p>
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/statistics/">Statistics</a></p></div>
 
-  <h3>Systems of Records: </h3>
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/campaigns.cfm">Campaigns &amp; Events</a></p></div>
 
-    <p>Information originally collected in traditional paper systems can be
-    submitted electronically, i.e., electronic commerce transactions and information updates
-    about eligibility benefits. Electronically submitted information is maintained and
-    destroyed pursuant to the Federal Records Act, and in some cases may be subject to the
-    Privacy Act. If information that you submit is to be used in a Privacy Act system of
-    records, there will be a Privacy Act Notice provided. </p>
-  
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/fund/">Funding Opportunities</a></p></div>
 
-	<p class="LastUpdated">Last updated: May 2005
-    </p></td>
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/media/">For the Media</a></p></div>
+
+<div class="main_nav"><p class="main"><a href="http://www.womenshealth.gov/healthpro/">For Health Professionals</a></p></div>
+
+<div class="main_nav"><p class="main"><a lang="es" href="http://www.womenshealth.gov/spanish/">Recursos en español</a></p></div>
+
+<div class="main_nav"><p class="home"><a href="http://www.womenshealth.gov/">womenshealth.gov Home</a></p></div>
+
+<div class="main_nav"><p class="home"><a href="http://www.girlshealth.gov">girlshealth.gov Home</a></p></div>
+
+</div>
+</div>
+
+
+<!-- InstanceBeginEditable name="news" --><!-- InstanceEndEditable -->	  </div></td>
+  <td valign="top" bgcolor="#FFFFFF"><table width="100%" border="0" cellspacing="15" cellpadding="0">
+      <tbody><tr>
+        <td><div class="atprint">
+          <div class="title">About the National Women's Health Information Center</div>
+        </div>
+          <div class="atscreen">
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tbody><tr>
+                <td><div class="pink">About the National Women's Health Information Center</div></td>
+                <td>&nbsp;</td>
+              </tr>
+            </tbody></table>
+          </div>
+          <a name="top"></a><br>
+          <!-- InstanceBeginEditable name="main" -->
+          <h1>NWHIC Web Site Privacy Policy Notice</h1>
+          <p class="breadcrumbs"><a href="../index.cfm">About the National Women's Health Information Center Home</a>  &gt; NWHIC Web Site Privacy Policy Notice</p>
+          <p>Thank you for visiting the National Women's Health Information Center (NWHIC) web site and for reviewing our Privacy Policy. Our policy is clear: </p>
+          <p><strong>We collect no information about you, other than information automatically collected and stored (see below), when you visit our web site unless you choose to provide that information to us.</strong></p>
+          <h2>Information Automatically Collected and Stored:</h2>
+          <p>When you browse through any web site, certain personal information about you can be collected. We automatically collect and temporarily store the following information about your visit: 
+          </p><ul>
+            <li>the name of the domain you use to access the Internet (for example, aol.com, if you are using an American Online account, or stanford.edu, if you are connecting from Stanford University's domain);</li>
+            <li>the date and time of your visit; </li>
+            <li>the pages you visited; and </li>
+            <li>the address of the web site you came from when you came to visit. </li>
+          </ul>
+          <p>We use this information for statistical purposes and to help us make our site more useful to visitors. Unless it is specifically stated otherwise, no additional information will be collected about you. </p>
+          <h2>Personally Provided Information: </h2>
+          <p>You do not have to give us personal information to use this web site. </p>
+          <p>If you choose to provide us with information about yourself through an e-mail message, form, survey, etc., we will only maintain the information as long as needed to respond to your question or to fulfill the stated purpose of the communication. </p>
+          <p>If you use our contact form, we will send an automated confirmation e-mail to the address you provide.</p>
+          <h2>Disclosure:</h2>
+          <p>NWHIC does not disclose, give, sell or transfer any personal information about our visitors, unless required for law enforcement or statute. </p>
+          <h2>Intrusion Detection:</h2>
+          <p>This site is maintained by the U.S. Government. It is protected by various provisions of Title 18, U.S. Code. Violations of Title 18 are subject to criminal prosecution in federal court. </p>
+          <p>For site security purposes and to ensure that this service remains available to all users, we employ software programs to monitor traffic to identify unauthorized attempts to upload or change information, or otherwise cause damage. In the event of authorized law enforcement investigations, and pursuant to any required legal process, information from these sources may be used to help identify an individual. </p>
+          <h2>Systems of Records:</h2>
+          <p>Information originally collected in traditional paper systems can be submitted electronically, i.e., electronic commerce transactions and information updates about eligibility benefits. Electronically submitted information is maintained and destroyed pursuant to the Federal Records Act, and in some cases may be subject to the Privacy Act. If information that you submit is to be used in a Privacy Act system of records, there will be a Privacy Act Notice provided. </p>
+          <p class="lastupdated">Current as of  May 2005</p>
+          <!-- InstanceEndEditable -->
+<div class="atscreen"> <span class="top"><a href="#top">Top</a></span> |  <a href="mailto:?body=I would like to share this web page with you: http://www.womenshealth.gov/about/privacy/index.cfm.">E-mail this page to a friend</a>
+           </div></td>
+      </tr>
+    </tbody></table>
+  </td>
   </tr>
 </tbody></table>
-
-<div align="center" style="border-top: 2px solid RGB(134,179,148); padding-top: 10px;" class="bottomborder">
+<div class="atscreen">
+  <div align="center" style="border-top: 2px solid RGB(134,179,148); padding-top: 10px;" class="bottomborder">
 <p style="text-align: right; font-family: verdana, arial, sans-serif; font-size: 10pt; padding: 0; margin: 0;"><a href="#skipbottomnav" title="Skip over the bottom navigation links" style="color: white">Skip navigation</a></p>
 <p style="font-family:Verdana, Arial, Helvetica, sans-serif; font-size:12px;">
 <img src="/borders/acrobat.gif" width="16" height="16" alt="Icon for portable document format (Acrobat) files"> You may need to <a href="http://www.adobe.com/products/acrobat/readstep2.html">download a free PDF reader</a> to view files marked with this icon.
 </p>
+<p style="font-family:Verdana, Arial, Helvetica, sans-serif; font-size:12px;">&nbsp;<br><strong>womenshealth.gov navigation</strong></p>
 <p style="font-family:Verdana, Arial, Helvetica, sans-serif; font-size:12px;">
 	<a href="/index.htm">Home</a> | 
-	<a href="/sitemap.htm">Site index</a> | 
+	<a href="/sitemap.cfm">Site index</a> | 
 	<a href="/contact">Contact us</a>
 </p>
 <p style="font-family:Verdana, Arial, Helvetica, sans-serif; font-size:12px;">
@@ -163,7 +185,7 @@
 	<a href="/tools">Tools</a> |
 	<a href="/orgs.cfm">Organizations</a> | 
 	<a href="/pub">Publications</a> | 
-	<a href="/media/stats.htm">Statistics</a>
+	<a href="/statistics/">Statistics</a>
 	<br>
 	<a href="/media">For the Media</a> | 
 	<a href="/healthpro">For Health Professionals</a> | 
@@ -176,10 +198,10 @@
 	<br>
 	<br>
 	<a href="/about">About Us</a> | 
-	<a href="/about/disclaimer.htm">Disclaimer</a> | 
-	<a href="/about/foia.htm">Freedom of Information Act Requests</a> | 
-	<a href="/about/accessibility.htm">Accessibility</a> | 
-	<a href="/about/privacy.htm">Privacy</a>
+	<a href="/about/disclaimer/">Disclaimer</a> | 
+	<a href="/about/foia/">Freedom of Information Act Requests</a> | 
+	<a href="/about/accessibility/">Accessibility</a> | 
+	<a href="/about/privacy/">Privacy</a>
 </p>
 
 
@@ -202,14 +224,17 @@
 </p>
 
 </div>
-<div align="center" class="bottomborder">
+  <div align="center" class="bottomborder">
 <p>
-<a href="http://validator.w3.org/check?uri=referer"><img src="/borders/valid-html401.png" alt="Valid HTML 4.01 Transitional" height="31" width="88" border="0"></a>
+<a href="http://validator.w3.org/check?uri=referer" title="Valid HTML 4.01 Transitional"><img src="/borders/valid-html401.png" alt="Valid HTML 4.01 Transitional" height="31" width="88" border="0"></a>
 &nbsp;
-<img style="border:0;width:88px;height:31px" src="/borders/valid-css.png" alt="Valid CSS!">
+<img style="border:0;width:88px;height:31px" src="/borders/valid-css.png" alt="Valid CSS!" title="Valid style definition (CSS)">
+&nbsp;
+<a href="http://www.w3.org/WAI/WCAG1AA-Conformance" title="Accessible web page - Level Double-A Conformance">
+  <img height="32" width="88" src="/borders/accessible.gif" alt="Level Double-A conformance icon, 
+          W3C-WAI Web Content Accessibility Guidelines 1.0" border="0"></a>
 </p>
 </div>
+</div>
 
-
-
-</body></html>
+<!-- InstanceEnd --></body></html>
