--- a/f/fi/fil/fileresearchcenter.com.html
+++ b/f/fi/fil/fileresearchcenter.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fileresearchcenter.com privacy policy that was archived on 2005-10-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051016055108id_/http%3A//www.fileresearchcenter.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fileresearchcenter.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615062756id_/http%3A//fileresearchcenter.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -88,7 +88,7 @@
   <tbody><tr>
     <td width="52%" align="left" bgcolor="#2D67A0" height="20" style="border-color: black; border-left-width: 1; border-right-width: 1; border-top-style: solid; border-top-width: 1; border-bottom-width: 1">
     <b>
-    <font face="Verdana" size="1" color="#FFFFFF">&nbsp;(c) Copyright 2004-2005 - 
+    <font face="Verdana" size="1" color="#FFFFFF">&nbsp;(c) Copyright 2004-2006 - 
     FileResearchCenter.com</font></b></td>
     <td width="50%" align="right" bgcolor="#2D67A0" height="20" style="border-color: black; border-left-width: 1; border-right-width: 1; border-top-style: solid; border-top-width: 1; border-bottom-width: 1"><font face="Verdana" size="1">
     <a class="cfooter" href="termsofservice.html">Terms of Service</a><font color="#FFFFFF"> -
