--- a/f/fa/fac/facialabuse.com.html
+++ b/f/fa/fac/facialabuse.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the facialabuse.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220184435id_/http%3A//www.facialabuse.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the facialabuse.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615063012id_/http%3A//facialabuse.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Facial Abuse</title>
